# rivers

./: CMakeLists.txt  README.md  make_single_header
.github/workflows/: benchmark.yml  ci.yml
bench/: CMakeLists.txt  benchmark.cxx
include/rivers/: chain.hpp  collect.hpp  core.hpp  drop.hpp  filter.hpp  format.hpp  from.hpp  from_cpp.hpp  from_stream.hpp  from_values.hpp  map.hpp  of.hpp  ref.hpp  rivers.hpp  seq.hpp  split.hpp  tag_invoke.hpp  take.hpp
single_include/rivers/: single_header.hpp
test/: CMakeLists.txt  basics.cxx  fmt.cxx  split.cxx  test_utils.hpp  value_type.cxx
